Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.h
@@ -35,6 +35,7 @@
 #include <WebCore/FetchOptions.h>
 #include <WebCore/NavigationRequester.h>
 #include <WebCore/ResourceLoaderIdentifier.h>
+#include <WebCore/SecurityContext.h>
 #include <wtf/Seconds.h>
 
 namespace IPC {
